test/type-error-6.ktn
define myAddVector<a> ([a] [a] -> [a]): kitten::intrinsic::addVector

define bar<a> ([a] [char] -> int):
  ->x; [x] myAddVector
